--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mexico = o\n",
+    "mexico = countries[]\n",
     "mexico"
    ]
   },
