--- a/index.ipynb
+++ b/index.ipynb
@@ -173,11 +173,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = countries[]\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
@@ -194,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = coun\n",
     "kindof_neighbors"
    ]
   },
