--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = 'New Mexico'  # add code here"
+    "countries = 'New Mexico' -> '' # add code here"
    ]
   },
   {
