Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "countries = ()'New Mexico' = 'USA' # add code here"
+    "countries =  # add code here"
    ]
   },
   {
