Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,20 +286,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to literal (<ipython-input-8-f013ec862c97>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-f013ec862c97>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    countries = 'New Mexico' = 'USA' # add code here\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries[] =  # add code here"
+    "countries[6] = 'USA' # add code here"
    ]
   },
   {
