--- a/index.ipynb
+++ b/index.ipynb
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries)-len(unqi)\n",
+    "num_of_repeats = len(countries)-len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
